# Evolution-of-Metal-Backend

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: app.rs  db.rs  lib.rs  main.rs
src/db/: init.sh  init.sql
src/db/tables/: musicforroan.txt
src/db/tables/genre/: create.sql  genre.csv  genres.txt
src/db/tables/genre_child/: create.sql
src/db/tables/song/: AtmosphericBlackMetal.csv  BlackMetal.csv  Blackgaze.csv  DSBM.csv  DeathMetal.csv  Deathcore.csv  Metalcore.csv  PowerMetal.csv  create.sql  song.csv  songs.csv
