[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-cors = "0.7.0"
async-trait = "0.1.77"
base64 = "0.21.7"
chrono = { version = "0.4.31", features = ["serde"] }
aws-config = { version= "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.10.1"
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.20"
lazy_static = "1.4.0"
env_logger = "0.11.1"
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio-native-tls", "macros"] }
serde_json = "1.0.111"
reqwest = { version = "0.11.23", features = ["blocking", "json", "serde_json"] }
openssl = "0.10.62"
jdbc = "0.1.0"
